--- a/tutorial/publication-quality.html
+++ b/tutorial/publication-quality.html
@@ -16,7 +16,7 @@ current_page: publication-quality
     <li><a href="project-walkthrough.html#formatting-checklists"><strong>Part I.C: Formatting Checklists</strong></a> — Pre-submission checklists for figures and tables</li>
   </ul>
 {% endcapture %}
-{% include "callout.liquid", type: "info", title: "Content Moved", content: callout_content %}
+{% include "callout.liquid", type: "info", heading: "Content Moved", content: callout_content %}
 
 <div style="text-align: center; margin: 40px 0;">
   <a href="project-walkthrough.html#pub-quality-output" style="display: inline-block; background: #1976d2; color: white; padding: 14px 36px; border-radius: 8px; text-decoration: none; font-weight: 600; font-size: 1.1em;">Go to Complete Project Walkthrough →</a>
